added sorce link

--- a/index.html
+++ b/index.html
@@ -135,7 +135,9 @@
             <h2>Todo App</h2>
             <h3>WDD 330: Web Frontend Development II</h3>
             <div class="site-plan">
-                <a href="screenshots/todo-wireframe.png">Wireframe</a>
+                <a href="screenshots/todo-wireframe.png">Wireframe</a> 
+                | 
+                <a href="https://github.com/blackadder-git/byui/tree/main/wdd330/week6/todo">Source</a>
             </div>            
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/wdd330/week6/todo/index.html"><img src="screenshots/todo600.png" alt="Screenshot of todo app written for frontend web development II"></a>
@@ -158,11 +160,11 @@
                         Complete a task<br>
                         Remove a task<br>
                         Filter tasks (complete/incomplete)
-                        </li>
+                    </li>
                     <li>Data sources: localStorage<br>
                         todo: { id : timestamp, content: string, completed: bool }<br>
                         toDoList = [toDo];</li>
-                    <li>Colors/Typography/specific Element styling: Student to determine</li>
+                    <li>Colors/Typography/specific Element styling: Determined by student.</li>
                 </ul>
             </div>
         </section>
@@ -172,6 +174,8 @@
             <h3>WDD 230: Web Frontend Development I</h3>
             <div class="site-plan">
                 <a href="https://blackadder-git.github.io/byui/wdd230/camaramajorero/CamaraMajorero.pdf">Site plan</a>
+                | 
+                <a href="https://github.com/blackadder-git/byui/tree/main/wdd130/jellyfish">Source</a>
             </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/wdd230/camaramajorero/index.html"><img src="screenshots/camara600.png" alt="Screenshot of chamber of commerce site created for frontend development I"></a>
@@ -213,6 +217,8 @@
             <h3>WDD 230: Web Frontend Development I</h3>
             <div class="site-plan">
                 <a href="https://blackadder-git.github.io/byui/wdd230/yeoldcrowsnest/site-plan/index.html">Site plan</a>
+                | 
+                <a href="https://github.com/blackadder-git/byui/tree/main/wdd230/yeoldcrowsnest">Source</a>                
             </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/wdd230/yeoldcrowsnest/index.html"><img src="screenshots/crow600.png" alt="Screenshot of weather site created for frontend development I"></a>
@@ -247,6 +253,8 @@
             <h3>WDD 130: Web Fundamentals</h3>
             <div class="site-plan">
                 <a href="https://blackadder-git.github.io/byui/wdd130/mother-goose/site-plan.html">Site plan</a>
+                | 
+                <a href="https://github.com/blackadder-git/byui/tree/main/wdd130/mother-goose">Source</a>
             </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/wdd130/mother-goose"><img src="screenshots/goose600.png" alt="Screenshot of mother goose site created for web fundamentals"></a>
@@ -275,6 +283,8 @@
             <h3>WDD 130: Web Fundamentals</h3>
             <div class="site-plan">
                 <a href="https://blackadder-git.github.io/byui/wdd130/jellyfish/site-plan.html">Site plan</a>
+                | 
+                <a href="https://github.com/blackadder-git/byui/tree/main/wdd130/jellyfish">Source</a>
             </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/wdd130/jellyfish"><img src="screenshots/jellyfish600.png" alt="Screenshot of rafting adventure site created for web fundamentals"></a>
