--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Project Portfolio</title>
+    <title>JC - Project Portfolio</title>
     <meta name="description" content="A collection of some of my projects">
     <!--link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png"-->
@@ -26,7 +26,6 @@
             --heading-font: 'Poller One', cursive;
             --paragraph-font: 'Open Sans', Verdana, Geneva, Tahoma, sans-serif;
         }
-
         html {
             background-color: #eee;
             font-family: var(--paragraph-font);
@@ -66,19 +65,9 @@
             background-image: linear-gradient(to right, #0c73b8 , #2eaadd);
         }
         .js {
-            background-image: linear-gradient(to right, #dab92c , #ffd93c);
-            
+            background-image: linear-gradient(to right, #dab92c , #ffd93c);            
         }
-        .wave {
-            background-color: orange;
-        }
-        .mobile {
-            background-color: orange;
-        }
-        .local {
-            background-color: orange;
-        }
-        .rest {
+        .wave, .mobile, .local, .rest {
             background-color: orange;
         }
         .cplusplus {
@@ -153,7 +142,7 @@
             <div class="details">
                 <h2>Project Requirements</h2>
                 <ul class="hideContent">
-                    <li>Build a simple web app to manage a ToDo list. It should allow the creation of new tasks, the viewing of tasks, a process to mark tasks as complete, ability to remove tasks, and the ability to filter by complete/not complete.</li>
+                    <li>Build a simple web app to manage a ToDo list. It should allow the creation of new tasks, the viewing of tasks, a process to mark tasks as complete, ability to remove tasks, and the ability to filter by complete/not complete</li>
                     <li>UI actions<br>
                         Show a list of tasks<br>
                         Add a new task<br>
@@ -164,7 +153,7 @@
                     <li>Data sources: localStorage<br>
                         todo: { id : timestamp, content: string, completed: bool }<br>
                         toDoList = [toDo];</li>
-                    <li>Colors/Typography/specific Element styling: Determined by student.</li>
+                    <li>Colors/Typography/specific Element styling: Determined by student</li>
                 </ul>
             </div>
         </section>
@@ -192,21 +181,21 @@
             <div class="details">
                 <h2>Project Requirements</h2>
                 <ul id="commerce" class="hideContent">
-                    <li>The site must be responsive to small, medium, and larger, wide screen views.</li>
-                    <li>The design is consistent throughout the website providing ease of navigation and supports excellent user experiences.</li>
-                    <li>Your page layouts may not be an exact replication of your weather site in terms of layout style.</li>
-                    <li>Your site must meet the specifications listed on the 230 Web Frontend Development Standards page.</li>
-                    <li>Structure the site with valid, standards-based, semantic markup that is responsive to small, medium and large screen views without violating PARC principles.</li>
-                    <li>Style with valid CSS that does not contain unused and unnecessary (duplicate) declarations nor different selector notations for the same element.</li>
-                    <li>Ensure that all browsers render elements consistently by referencing a normalization or reset CSS on all pages.</li>
-                    <li>Design a logo to be used at appropriate levels and locations throughout the website.</li>
-                    <li>Follow PARC principles and typography best-practices throughout the website.</li>
-                    <li>Implement an appropriate font of your choice, using a Google Fonts reference or equivalent resource.</li>
-                    <li>Use the practice of wayfinding to improve the user experience of understanding where a user is on the website.</li>
-                    <li>Use JavaScript as needed including driving the content of the business directory page from your own JSON file.</li>
-                    <li>Ensure that there are no spelling or grammatical errors.</li>
-                    <li>Include a resource/attribution page that references outside content, if necessary, as a link in the footer.</li>
-                    <li>Include the last modified date of the page in the footer using JavaScript.</li>
+                    <li>The site must be responsive to small, medium, and larger, wide screen views</li>
+                    <li>The design is consistent throughout the website providing ease of navigation and supports excellent user experiences</li>
+                    <li>Your page layouts may not be an exact replication of your weather site in terms of layout style</li>
+                    <li>Your site must meet the specifications listed on the 230 Web Frontend Development Standards page</li>
+                    <li>Structure the site with valid, standards-based, semantic markup that is responsive to small, medium and large screen views without violating PARC principles</li>
+                    <li>Style with valid CSS that does not contain unused and unnecessary (duplicate) declarations nor different selector notations for the same element</li>
+                    <li>Ensure that all browsers render elements consistently by referencing a normalization or reset CSS on all pages</li>
+                    <li>Design a logo to be used at appropriate levels and locations throughout the website</li>
+                    <li>Follow PARC principles and typography best-practices throughout the website</li>
+                    <li>Implement an appropriate font of your choice, using a Google Fonts reference or equivalent resource</li>
+                    <li>Use the practice of wayfinding to improve the user experience of understanding where a user is on the website</li>
+                    <li>Use JavaScript as needed including driving the content of the business directory page from your own JSON file</li>
+                    <li>Ensure that there are no spelling or grammatical errors</li>
+                    <li>Include a resource/attribution page that references outside content, if necessary, as a link in the footer</li>
+                    <li>Include the last modified date of the page in the footer using JavaScript</li>
                 </ul>
                 <div class="readmore" data-id="commerce">Read more</div>
             </div>
@@ -235,14 +224,14 @@
             <div class="details">
                 <h2>Project Requirements</h2>
                 <ul id="weather" class="hideContent">
-                    <li>The design is consistent throughout the website providing ease of navigation and supporting positive user experiences.</li>
-                    <li>The header contains a logo, site title, and a site motto.</li>
-                    <li>The navigation menu contains links to the six (6) main pages including: Home, Preston, Soda Springs, Fish Haven, Storm Center, and Gallery.</li>
-                    <li>The footer contains contact information as given in the town page example and other relevant information.</li>
-                    <li>The home page contains a current weather story with corresponding image and information sections for all three towns.</li>
-                    <li>The town weather pages contain weather conditions and other town information or relevant articles/content.</li>
-                    <li>Images are used to reflect the current weather condition data on the town pages and the towns themselves.</li>
-                    <li>The site supports responsive design techniques allowing delivery of the site and its content on all classes of devices: large-wide screens (desktop/laptop), medium-screens (tablet), and small-screens (smartphones).</li>
+                    <li>The design is consistent throughout the website providing ease of navigation and supporting positive user experiences</li>
+                    <li>The header contains a logo, site title, and a site motto</li>
+                    <li>The navigation menu contains links to the six (6) main pages including: Home, Preston, Soda Springs, Fish Haven, Storm Center, and Gallery</li>
+                    <li>The footer contains contact information as given in the town page example and other relevant information</li>
+                    <li>The home page contains a current weather story with corresponding image and information sections for all three towns</li>
+                    <li>The town weather pages contain weather conditions and other town information or relevant articles/content</li>
+                    <li>Images are used to reflect the current weather condition data on the town pages and the towns themselves</li>
+                    <li>The site supports responsive design techniques allowing delivery of the site and its content on all classes of devices: large-wide screens (desktop/laptop), medium-screens (tablet), and small-screens (smartphones)</li>
                 </ul>
                 <div class="readmore" data-id="weather">Read more</div>                
             </div>
@@ -269,10 +258,12 @@
             <div class="details">
                 <h2>Project Requirements</h2>
                 <ul class="hideContent">
-                    <li>The Web site must consist of a main page and at least 2 child pages. One of the child pages should include a form. The Web site must be published to the web.</li>
-                    <li>Each of the 3 pages of your Web site must satisfy the following requirements:</li>
-                    <li>Significant content consisting of both text and a minimum of one image. You need to make sure this page has the appropriate content for your audience so that they can understand the meaning and message of this site.</li>
-                    <li>Working links to the all of the other pages you have created.</li>
+                    <li>The Web site must consist of a main page and at least 2 child pages. One of the child pages should include a form. The Web site must be published to the web</li>
+                    <li>Each of the 3 pages of your Web site must satisfy the following requirements:<br>
+                        Significant content consisting of both text and a minimum of one image<br>
+                        You need to make sure this page has the appropriate content for your audience so that they can understand the meaning and message of this site
+                    </li>
+                    <li>Working links to the all of the other pages you have created</li>
                     <li>Be visually appealing</li>
                 </ul>
             </div>
@@ -298,10 +289,12 @@
             <div class="details">
                 <h2>Project Requirements</h2>
                 <ul class="hideContent">
-                    <li>The web site must consist of a main page and at least 1 child page. The web site must be published to the web.</li>
-                    <li>Each of the pages of your web site must satisfy the following requirements:</li>
-                    <li>Significant content consisting of both text and a minimum of one image. You need to make sure this page has the appropriate content for your audience so that they can understand the meaning and message of this site.</li>
-                    <li>Working links to the all of the other pages you have created.</li>
+                    <li>The web site must consist of a main page and at least 1 child page. The web site must be published to the web</li>
+                    <li>Each of the pages of your web site must satisfy the following requirements:<br>
+                        Significant content consisting of both text and a minimum of one image<br>
+                        You need to make sure this page has the appropriate content for your audience so that they can understand the meaning and message of this site
+                    </li>
+                    <li>Working links to the all of the other pages you have created</li>
                     <li>Be visually appealing</li>
                 </ul>
             </div>
@@ -332,10 +325,10 @@
                         prjFinal100.txt
                     </li>
                     <li>Modify your code (Project 13 or Project Extra) so solve a Sudoku board</li>
-                    <li>You will need to add another item on the menu to allow the user to select that they want to solve the board. You can name this menu item anything you want. In fact, because there is no testBed for this challenge, feel free to make any adjustments to the user interface you want.</li>
-                    <li>"Robust" error checking. Every possible input or board configuration is handled. For example, the user could type "e5" or "5E" to specify a square. Also, the board is validated on open to ensure it is a valid board This means ensuring that there is no more than one instance of each value in a given row, column, or inside square.</li>
+                    <li>You will need to add another item on the menu to allow the user to select that they want to solve the board. You can name this menu item anything you want. In fact, because there is no testBed for this challenge, feel free to make any adjustments to the user interface you want</li>
+                    <li>"Robust" error checking. Every possible input or board configuration is handled. For example, the user could type "e5" or "5E" to specify a square. Also, the board is validated on open to ensure it is a valid board This means ensuring that there is no more than one instance of each value in a given row, column, or inside square</li>
                     <li>Differentiate read-only values (the ones provided by the board that the user cannot change) and read/write values (the ones the user entered). Read-only text will be rendered in green. The following example outputs green text for the word "green"</li>
-                    <li>Enforce the rules of Sudoku. This means that there can be only one instance of a given number on a row, column, or inside square.</li>
+                    <li>Enforce the rules of Sudoku. This means that there can be only one instance of a given number on a row, column, or inside square</li>
                     <li>Create a program that performs six operations:<br>
                         Read: Read a board from a file into our board[][] array<br>
                         Write: Write the board[] array back to a file<br>
