--- a/index.html
+++ b/index.html
@@ -258,7 +258,8 @@
             <div class="details">
                 <h2>Project Requirements</h2>
                 <ul class="hideContent">
-                    <li>The Web site must consist of a main page and at least 2 child pages. One of the child pages should include a form. The Web site must be published to the web</li>
+                    <li>The web site must consist of a main page and at least 2 child pages</li> 
+                    <li>One of the child pages should include a form. The Web site must be published to the web</li>
                     <li>Each of the 3 pages of your Web site must satisfy the following requirements:<br>
                         Significant content consisting of both text and a minimum of one image<br>
                         You need to make sure this page has the appropriate content for your audience so that they can understand the meaning and message of this site
@@ -289,7 +290,8 @@
             <div class="details">
                 <h2>Project Requirements</h2>
                 <ul class="hideContent">
-                    <li>The web site must consist of a main page and at least 1 child page. The web site must be published to the web</li>
+                    <li>The web site must consist of a main page and at least 1 child page</li>
+                    <li>The web site must be published to the web</li>
                     <li>Each of the pages of your web site must satisfy the following requirements:<br>
                         Significant content consisting of both text and a minimum of one image<br>
                         You need to make sure this page has the appropriate content for your audience so that they can understand the meaning and message of this site
