--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>JC - Project Portfolio</title>
+    <title>JC - Projects Portfolio</title>
     <meta name="description" content="A collection of some of my projects">
     <!--link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png"-->
@@ -117,7 +117,7 @@
     </style>
 </head>
 <body>
-    <h1>JC - Portfolio Projects</h1>
+    <h1>JC - Projects Portfolio</h1>
 
     <main id="projects">
         <section>
@@ -296,7 +296,7 @@
                         Significant content consisting of both text and a minimum of one image<br>
                         You need to make sure this page has the appropriate content for your audience so that they can understand the meaning and message of this site
                     </li>
-                    <li>Working links to the all of the other pages you have created</li>
+                    <li>Working links to the all of the other pages you created</li>
                     <li>Be visually appealing</li>
                 </ul>
             </div>
