--- a/wdd330/beehive/index.html
+++ b/wdd330/beehive/index.html
@@ -18,28 +18,37 @@
 <body>
     <main>
         <h1>Beehive</h1>
-        <section>
-            <!-- overview -->
-            Overview information
-        </section>
+        <div id="widgets">
+            <section>
+                <!-- overview -->
+                Overview information
+            </section>
+
+            <section>
+                <!-- family -->
+                <div id="familyMembers"></div>
+                <input id="editFamily" type="button" value="Edit Family Members">
+            </section>
+
+            <section>
+                <!-- pantry -->
+                <div id="pantryItems"></div>
+                <input id="editPantry" type="button" value="Edit Pantry">
+            </section>
+
+            <section>
+                <!-- recipes -->
+                <div id="recipes"></div>
+                <input id="editRecipe" type="button" value="Edit Recipes">
+            </section>
+        </div>>
 
         <section>
-            <!-- family -->
-            <div id="familyMembers"></div>
-            <input id="editFamily" type="button" value="Add Family Member">
+            <!-- mealplan -->
+            <div id="mealplan"></div>
+            <input id="editMealplan" type="button" value="Edit Meal Plan">
         </section>
 
-        <section>
-            <!-- pantry -->
-            <div id="pantryItems"></div>
-            <input id="editPantry" type="button" value="Add to Pantry">
-        </section>
-
-        <section>
-            <!-- recipes -->
-            <div id="recipes"></div>
-            <input id="editRecipe" type="button" value="Add Recipe">
-        </section>
     </main>
 </body>
 </html>
