--- a/cse340/finalproject.html
+++ b/cse340/finalproject.html
@@ -36,7 +36,11 @@
         <video controls="controls autoplay">
             <source src="finalproject.mp4" type="video/mp4">
             Your browser does not support the video tag. 
-        </video>        
+        </video>
+
+        <br><br><br>
+        <a href="images/notfound.png" target="blank">Screenshot of results for term that isn´t there</a>
+
     </div>
 </body>
 </html>
