--- a/wdd330/beehive/index.html
+++ b/wdd330/beehive/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Beehive</title>
+    <title>Emergency Food Planner</title>
     <meta name="description" content="Emergency food planner">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Charm&family=Montserrat&display=swap">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/tables.css">
+
     <script defer src="js/main.js" type="module"></script>
 </head>
 <body>
@@ -25,10 +26,10 @@
                 <h2>Household</h2>
                 <div id="householdNumber"></div>
                 <ul>
-                    <li># of people in household: <span id="numHousehold"></span></li>
-                    <li># of recommended calories per day: <span id="numCalories"></span></li>
+                    <li># household: <span id="numHousehold"></span></li>
+                    <li># recommended calories per day: <span id="numCalories"></span></li>
                 </ul>
-                <input id="addFamily" type="button" value="Add Members">
+                <input id="addFamily" class="addFamily mainButton" type="button" value="Add Members">
             </section>
 
             <section>
@@ -36,10 +37,10 @@
                 <h2>Pantry</h2>
                 <div id="pantryItems"></div>
                 <ul>
-                    <li># items in pantry: <span id="numPantryItems"></span></li>
-                    <li># shopping list (items to buy based on mealplan)</li>
+                    <li># pantry: <span id="numPantryItems"></span></li>
+                    <li># shopping list: <span id="numShoppingList"></span></li>
                 </ul>
-                <input id="addPantry" type="button" value="Add Items">
+                <input id="addPantry" class="addPantry mainButton" type="button" value="Add Items">
             </section>
 
             <section>
@@ -47,10 +48,9 @@
                 <h2>Cookbook</h2>
                 <div id="recipes"></div>
                 <ul>
-                    <li># of recipes: <span id="numRecipes"></span></li>
-                    <li>Upon creation, each recipe queries information about the ingredients and comes up with calorie estimate</li>
+                    <li># recipes: <span id="numRecipes"></span></li>
                 </ul>
-                <input id="addRecipe" type="button" value="Add Recipes">
+                <input id="addRecipe" class="addRecipe mainButton" type="button" value="Add Recipes">
             </section>
         </div>
 
@@ -59,29 +59,15 @@
             <h2>Meal Plan</h2>
             <div id="mealplan"></div>
             <ul>
-                <li>Using weekly increments, does the daily meal plan match the number of recommended calories given the household recommendations?</li>
-                <li># of times the weekly meal plan would be followed.  e.g. if only one week is entered, it will be eaten 52 times, if two weeks are entered, both will be eaten 26 times</li>
-                <li>Recipes are dropped onto days of the week</li>
+                <li># meal plans: <span id="numMealplans"></span></li>
             </ul>
-        <input id="addMealplan" type="button" value="Edit Meal Plan">
+            <input id="addMealplan" class="addMealplan mainButton" type="button" value="Add Meal Plan">
         </section>
-
-
-        <!--div class="modal" id="pantry">
-            <div class="modal-dialog">
-                <header class="modal-header">
-                    ...
-                    <button class="close-modal" aria-label="close modal" data-close>✕</button>
-                </header>
-                <section class="modal-content">...</section>
-                <footer class="modal-footer">...</footer>
-            </div>
-        </div-->
 
         <div class="modal" id="modal">
             <div class="modal-dialog">
               <header class="modal-header">
-                <h2>Title</h2>
+                <h2>Modal</h2>
                 <button class="closeModal" data-id="modal" aria-label="close modal" data-close>
                   ✕  
                 </button>
@@ -94,7 +80,7 @@
                 <p>Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure</p>
               </section>
               <footer class="modal-footer">
-                The footer of the first modal
+                footer
               </footer>
             </div>
         </div>
