--- a/wdd330/week14/index.html
+++ b/wdd330/week14/index.html
@@ -35,17 +35,17 @@
             Your browser does not support the video tag.
         </video>
         Three minute description of my work this semester and how it relates to each part of the self-evaluation form. 
-        <a href="https://drive.google.com/file/d/16f7XA9mp2LBttBEe4eqssMJdJYfTUqs5/view?usp=sharing">Google drive</a>
+        <!--a href="https://drive.google.com/file/d/16f7XA9mp2LBttBEe4eqssMJdJYfTUqs5/view?usp=sharing">Google drive</a-->
     </div>
 
     <div>
-        <!--video controls="controls autoplay">
+        <video controls="controls autoplay">
             <source src="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing" type="video/mp4">
             Your browser does not support the video tag.
-        </video-->
+        </video>
         Trying to explain everything I did in three minutes was hard. This is the first video I made that shows more of the 
         block 2 challenge but even with 10 minutes, the presentation was rushed. 
-        <a href="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing">Google drive</a>
+        <!--a href="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing">Google drive</a-->
 
     </div>
 
