--- a/wdd330/week14/index.html
+++ b/wdd330/week14/index.html
@@ -45,7 +45,7 @@
         </video>
         Trying to explain everything I did in three minutes was hard. This is the first video I made that shows more of the 
         block 2 challenge but even with 10 minutes, the presentation was rushed. 
-        <!--a href="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing">Google drive</a-->
+        <a href="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing">Google drive</a>
 
     </div>
 
