--- a/wdd330/week14/index.html
+++ b/wdd330/week14/index.html
@@ -39,14 +39,13 @@
     </div>
 
     <div>
+        Trying to explain everything I did in three minutes was hard. Below is the first video I made.  It shows more of the 
+        block 2 challenge but even with 10 minutes, the presentation was rushed. 
+        <a href="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing">Download from Google drive</a>
         <video controls="controls autoplay">
             <source src="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        Trying to explain everything I did in three minutes was hard. This is the first video I made that shows more of the 
-        block 2 challenge but even with 10 minutes, the presentation was rushed. 
-        <a href="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing">Google drive</a>
-
     </div>
 
 </body>
