--- a/wdd330/week14/index.html
+++ b/wdd330/week14/index.html
@@ -30,18 +30,21 @@
 <body>
     <h1>Final Portfolio Submission</h1>
     <div>
+        Below, three minute description of my work this semester and how it relates to each part of the self-evaluation form. 
         <video controls="controls autoplay">
             <source src="finalPortfolio.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        Three minute description of my work this semester and how it relates to each part of the self-evaluation form. 
+        
         <!--a href="https://drive.google.com/file/d/16f7XA9mp2LBttBEe4eqssMJdJYfTUqs5/view?usp=sharing">Google drive</a-->
     </div>
 
+    <br><br>
+
     <div>
-        Trying to explain everything I did in three minutes was hard. Below is the first video I made.  It shows more of the 
-        block 2 challenge but even with 10 minutes, the presentation was rushed. 
-        <a href="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing">Download from Google drive</a>
+        Trying to explain everything I did in three minutes was hard. Below is the first video I made. It shows more of the 
+        block 2 challenge but even with 10 minutes, the presentation was rushed. If the longer video doesn´t load, it can be 
+        <a href="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing">downloaded from Google drive</a>
         <video controls="controls autoplay">
             <source src="https://drive.google.com/file/d/1FfBru_KFvVv7gf0dY6DYcrgLTL9khhnU/view?usp=sharing" type="video/mp4">
             Your browser does not support the video tag.
