added one more video

--- a/cse341/lemonbrains.html
+++ b/cse341/lemonbrains.html
@@ -143,6 +143,7 @@
             Your browser does not support the video tag.
         </video>
 	<h3>POST/DELETE /leaders/</h3>
+
         <video controls="controls autoplay">
             <source src="14_post_delete_statistic.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -155,6 +156,11 @@
         </video>
 	<h3>GET /users/ (revisited)</h3>
 
+	<video controls="controls autoplay">
+            <source src="all_endpoints_fail.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+	<h3>Shows all endpoints fail when not logged in</h3>
 
     </div>
 	
