--- a/cse341/lemonbrains.html
+++ b/cse341/lemonbrains.html
@@ -157,7 +157,7 @@
 	<h3>GET /users/ (revisited)</h3>
 
 	<video controls="controls autoplay">
-            <source src="all_endpoints_fail.mp4" type="video/mp4">
+            <source src="all_endpoint_fail.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 	<h3>Shows all endpoints fail when not logged in</h3>
