fixed broken links

--- a/cit360/reflection/threads.html
+++ b/cit360/reflection/threads.html
@@ -11,7 +11,7 @@
     <script defer src="js/threads.js"></script>
 </head>
 <body>
-    <h1><a href="/">Metacognition Matrix</a> | Threads, Runnables, Exectors <span class="key">0</span></h1>
+    <h1><a href="/byui/cit360/reflection/">Metacognition Matrix</a> | Threads, Runnables, Exectors <span class="key">0</span></h1>
     <main>
         <!-- https://imagemapper.noc.io/#/-->
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1333 667">
