--- a/cit360/reflection/json.html
+++ b/cit360/reflection/json.html
@@ -11,7 +11,7 @@
     <script defer src="js/json.js"></script>
 </head>
 <body>
-    <h1><a href="/byui/cit360/reflection/">Metacognition Matrix</a> | JSON and HTTP/URL <span class="key">0</span></h1>
+    <h1><a href="index.html">Metacognition Matrix</a> | JSON and HTTP/URL <span class="key">0</span></h1>
     <main>
         <!-- https://imagemapper.noc.io/#/-->
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1333 667">
