--- a/cit360/reflection/threads.html
+++ b/cit360/reflection/threads.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Threads, Runnables, Exectors</title>
-    <meta name="description" content="Threads, Runnables, Exectors | Metacognition Mind Palace">
+    <title>Threads, Runnables, Executors</title>
+    <meta name="description" content="Threads, Runnables, Executors | Metacognition Mind Palace">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">    
     <script defer src="js/threads.js"></script>
 </head>
 <body>
-    <h1><a href="index.html">Metacognition Matrix</a> | Threads, Runnables, Exectors <span class="key">0</span></h1>
+    <h1><a href="index.html">Metacognition Matrix</a> | Threads, Runnables, Executors <span class="key">0</span></h1>
     <main>
         <!-- https://imagemapper.noc.io/#/-->
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1333 667">
